# raindrops-contests

./: Anchor.toml  README.md  package-lock.json  package.json
programs/events-oracle/: Cargo.toml
programs/events-oracle/src/: errors.rs  lib.rs  state.rs
programs/events-oracle/src/instructions/: claim_rewards.rs  create_event.rs  end_event.rs  join_event.rs  mod.rs  submit_prediction.rs
tests/: events-oracle.ts
tests/test-keypairs/: test-keypairs.ts
tests/utils/: utils.ts
